No changes; Move Workstation

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,2 +1,6 @@
+# INSERT "source file/path/location/tmux.conf" TO ~/.tmux.conf FILE"
+
 # RELOAD TMUX CONFIG FILE
 bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
+
+set -g default-terminal xterm-256color
