tmux vim updates

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,4 +3,18 @@
 # RELOAD TMUX CONFIG FILE
 bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
 
-set -g default-terminal xterm-256color
+#
+set -g set-titles on
+
+# PREVENT WINDOW RENAME
+set-option -g allow-rename off
+
+# PANE MOVEMENT SHORTCUTS
+bind h select-pane -L
+bind j select-pane -U
+bind k select-pane -D
+bind l select-pane -R
+
+
+# COLOR & STYLE
+set -g default-terminal screen-256color
