--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,6 +17,5 @@ bind l select-pane -R
 
 
 # COLOR & STYLE
-set -g default-terminal screen-256color
-
-source ~/dotfiles/tmux/templates/layout/tmux-themepack/powerline/double/cyan.tmuxtheme
+source-file ~/dotfiles/tmux/templates/layout/tmux-themepack/powerline/double/cyan.tmuxtheme
+# source-file ~/dotfiles/tmux/templates/layout/tmux-themepack/default.tmuxtheme
