--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,3 +19,9 @@ bind l select-pane -R
 # COLOR & STYLE
 source-file ~/dotfiles/tmux/templates/layout/tmux-themepack/powerline/double/cyan.tmuxtheme
 # source-file ~/dotfiles/tmux/templates/layout/tmux-themepack/default.tmuxtheme
+
+# PLUGINS
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+run '~/dotfiles/tmux/plugins/tpm/tpm'
