--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,6 +3,9 @@
 # RELOAD TMUX CONFIG FILE
 bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
 
+# SET DEFAULT SHELL
+set-option -g default-shell /bin/bash
+
 #
 set -g set-titles on
 
@@ -17,11 +20,17 @@ bind l select-pane -R
 
 
 # COLOR & STYLE
-source-file ~/dotfiles/tmux/templates/layout/tmux-themepack/powerline/double/cyan.tmuxtheme
+# source-file ~/dotfiles/tmux/templates/layout/tmux-themepack/powerline/double/cyan.tmuxtheme
 # source-file ~/dotfiles/tmux/templates/layout/tmux-themepack/default.tmuxtheme
 
-# PLUGINS
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
+# VERSION SPECIFICS
+VERSION=2.0
+if-shell '[ tmux -V | cut -d ' ' -f2` -lt $VERSION ]'
+    source-file ~/dotfiles/tmux/templates/layout/tmux-themepack/powerline/double/yellow.tmuxtheme
+
+if-shell '[ tmux -V | cut -d ' ' -f2` -ge $VERSION ]'	
+	# PLUGINS
+	set -g @plugin 'tmux-plugins/tpm'
+	set -g @plugin 'tmux-plugins/tmux-sensible'
 
 run '~/dotfiles/tmux/plugins/tpm/tpm'
