tmux; added version check script

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -25,12 +25,14 @@ bind l select-pane -R
 
 # VERSION SPECIFICS
 VERSION=2.0
-if-shell '[ tmux -V | cut -d ' ' -f2` -lt $VERSION ]'
+if-shell '[ tmux -V | cut -d ' ' -f2` -lt $VERSION ]';then
     source-file ~/dotfiles/tmux/templates/layout/tmux-themepack/powerline/double/yellow.tmuxtheme
-
-if-shell '[ tmux -V | cut -d ' ' -f2` -ge $VERSION ]'	
+else #if-shell '[ tmux -V | cut -d ' ' -f2` -ge $VERSION ]'	
 	# PLUGINS
 	set -g @plugin 'tmux-plugins/tpm'
 	set -g @plugin 'tmux-plugins/tmux-sensible'
+
+	# COLOR & STYLE
+    source-file ~/dotfiles/tmux/templates/layout/tmux-themepack/powerline/double/cyan.tmuxtheme
 
 run '~/dotfiles/tmux/plugins/tpm/tpm'
