tmux;Added version specific config files

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,4 @@
-# INSERT "source file/path/location/tmux.conf" TO ~/.tmux.conf FILE"
+# SOURCED FROM verifyTmuxVersion
 
 # RELOAD TMUX CONFIG FILE
 bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
@@ -18,21 +18,4 @@ bind j select-pane -U
 bind k select-pane -D
 bind l select-pane -R
 
-
-# COLOR & STYLE
-# source-file ~/dotfiles/tmux/templates/layout/tmux-themepack/powerline/double/cyan.tmuxtheme
-# source-file ~/dotfiles/tmux/templates/layout/tmux-themepack/default.tmuxtheme
-
-# VERSION SPECIFICS
-VERSION=2.0
-if-shell '[ tmux -V | cut -d ' ' -f2` -lt $VERSION ]';then
-    source-file ~/dotfiles/tmux/templates/layout/tmux-themepack/powerline/double/yellow.tmuxtheme
-else #if-shell '[ tmux -V | cut -d ' ' -f2` -ge $VERSION ]'	
-	# PLUGINS
-	set -g @plugin 'tmux-plugins/tpm'
-	set -g @plugin 'tmux-plugins/tmux-sensible'
-
-	# COLOR & STYLE
-    source-file ~/dotfiles/tmux/templates/layout/tmux-themepack/powerline/double/cyan.tmuxtheme
-
-run '~/dotfiles/tmux/plugins/tpm/tpm'
+# PANE RESIZE
