--- a/tmux/tmux_2.2_up.conf
+++ b/tmux/tmux_2.2_up.conf
@@ -1,8 +1,14 @@
 # PLUGINS
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
+#set -g @plugin 'tmux-plugins/tpm'
+#set -g @plugin 'tmux-plugins/tmux-sensible'
+#set -g @plugin 'jimeh/tmux-themepack'
+
+set -g @tpm_plugins '    \
+    tmux-plugins/tpm     \
+    jimeh/tmux-themepack \
+'
 
 # COLOR & STYLE
-source-file ~/dotfiles/tmux/templates/layout/tmux-themepack/powerline/double/cyan.tmuxtheme
+set -g @themepack 'powerline/double/cyan'
 
 run '~/dotfiles/tmux/plugins/tpm/tpm'
