tmux; Added New Pane to start in Same Directory

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,6 +6,9 @@ bind-key r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded"
 # SET DEFAULT SHELL
 set-option -g default-shell /bin/bash
 
+# NEW PANE SAME DIRECTORY
+bind-key % split-window -h -c "#{pane_current_path}"
+bind-key '"' split-window -h -c "#{pane_current_path}"
 #
 set -g set-titles on
 
