tmux; Fixed -v split

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,7 +8,7 @@ set-option -g default-shell /bin/bash
 
 # NEW PANE SAME DIRECTORY
 bind-key % split-window -h -c "#{pane_current_path}"
-bind-key '"' split-window -h -c "#{pane_current_path}"
+bind-key '"' split-window -v -c "#{pane_current_path}"
 #
 set -g set-titles on
 
